todo update for feb/17/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -13,17 +13,19 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
 ### () - SAT 02/18/2023
-
-<!-- videoground R6 --->
-* () videoground: do some more work on R6
+<!-- videoground R7 --->
+* () videoground: do some more work on R7
 
 ### () - FRI 02/17/2023
+* (dome) videoground-beta-world: timer-hiit - start video5-cdr1.js
+* (done) videoground: finished R6 of videoground.
+* (done) videoground: started R7 of videoground
 <!-- forpost/new -->
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 * () start post #1028 on threejs-examples-tracks
-<!-- videoground R6 --->
-* () videoground: do some more work on R6.
-<!-- videoground-beta-world -->
-* () videoground-beta-world: timer-hiit - start video5-cdr1.js
+<!-- videoground -->
+* () videoground-blog-posts: at least start a video folder for threejs-examples-tracks
+* () videoground-blog-posts: if video1 is done, upload and embed
 
 ### () - THU 02/16/2023
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
@@ -33,8 +35,6 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) forpost: threejs-capsule-geometry - update demos to r146 style
 * (done) forpost: threejs-capsule-geometry - one new demo
 * (done) edit: threejs-capsule-geometry - write about new demo
-<!-- forpost/new -->
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - WED 02/15/2023
 * (done) videoground-beta-world: timer-hiit - video4-ratio.js started
