todo update for 02/18/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -15,17 +15,21 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - SAT 02/18/2023
 <!-- videoground R7 --->
 * () videoground: do some more work on R7
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/17/2023
 * (dome) videoground-beta-world: timer-hiit - start video5-cdr1.js
 * (done) videoground: finished R6 of videoground.
 * (done) videoground: started R7 of videoground
-<!-- forpost/new -->
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
-* () start post #1028 on threejs-examples-tracks
+* (done) forpost: threejs-examples-tracks - finished r0-2-flip demo
+* (done) start post #1028 on threejs-examples-tracks
 <!-- videoground -->
 * () videoground-blog-posts: at least start a video folder for threejs-examples-tracks
 * () videoground-blog-posts: if video1 is done, upload and embed
+<!-- edit: -->
+* () edit: threejs-examples-tracks - finish r0 section
+* () edit: threejs-examples-tracks - finish conclusion
+* () edit: threejs-examples-tracks - finish getting started section
 
 ### () - THU 02/16/2023
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
