todo update for feb/17

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -13,6 +13,8 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
 ### () - SAT 02/18/2023
+<!-- edit: -->
+* () edit: threejs-examples-tracks - expand more on R0 section
 <!-- videoground R7 --->
 * () videoground: do some more work on R7
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
@@ -23,13 +25,12 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) videoground: started R7 of videoground
 * (done) forpost: threejs-examples-tracks - finished r0-2-flip demo
 * (done) start post #1028 on threejs-examples-tracks
+* (done) edit: threejs-examples-tracks - start r0 section
+* (done) edit: threejs-examples-tracks - start conclusion
+* (done) edit: threejs-examples-tracks - start getting started section
 <!-- videoground -->
 * () videoground-blog-posts: at least start a video folder for threejs-examples-tracks
 * () videoground-blog-posts: if video1 is done, upload and embed
-<!-- edit: -->
-* () edit: threejs-examples-tracks - finish r0 section
-* () edit: threejs-examples-tracks - finish conclusion
-* () edit: threejs-examples-tracks - finish getting started section
 
 ### () - THU 02/16/2023
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
