todo list update

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -28,9 +28,8 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-examples-tracks - start r0 section
 * (done) edit: threejs-examples-tracks - start conclusion
 * (done) edit: threejs-examples-tracks - start getting started section
-<!-- videoground -->
-* () videoground-blog-posts: at least start a video folder for threejs-examples-tracks
-* () videoground-blog-posts: if video1 is done, upload and embed
+* (done) videoground-blog-posts: at least start a video folder for threejs-examples-tracks
+* (done) videoground-blog-posts: if video1 is done, upload and embed
 
 ### () - THU 02/16/2023
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
