--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -7,17 +7,26 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+
+<!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 02/019/2023 - SAT 02/25/2023
+
+### () - SUN 02/19/2023
+<!-- edit: -->
+* () edit: threejs-examples-tracks - expand more on R0 section
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+<!-- videoground r7 -->
+* () work on next item in videoground r7 todo list
+
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
 ### () - SAT 02/18/2023
-<!-- edit: -->
-* () edit: threejs-examples-tracks - expand more on R0 section
-<!-- videoground R7 --->
-* () videoground: do some more work on R7
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* (done) videoground: do some more work on R7
 
 ### () - FRI 02/17/2023
 * (dome) videoground-beta-world: timer-hiit - start video5-cdr1.js
