todo updated for 02/19/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -13,10 +13,32 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ---------- --------->
 ## () - WEEK 4 - SUN 02/019/2023 - SAT 02/25/2023
 
-### () - SUN 02/19/2023
-<!-- edit: -->
+### () - SAT 02/25/2023
+
+### () - FRI 02/24/2023
+
+### () - THU 02/23/2023
+
+### () - WED 02/22/2023
+
+### () - TUE 02/21/2023
+
+### () - MON 02/20/2023
+<!-- forpost/edit -->
 * () edit: threejs-examples-tracks - expand more on R0 section
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+
+### () - SUN 02/19/2023
+* (done) edit: threejs-emissive-map - proof read intro, and getting started
+* (done) forpost: threejs-emissive-map - update demos to r146 style
+* (done) edit: threejs-emissive-map - inject updated code, and do additional proof reading
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts - start video2 for threejs-emissive-map
+* () edit: threejs-emissive-map - embed video2
+* () forpost: threejs-emissive-map - new demo based on video1 code
+* () edit: threejs-emissive-map - write about video1
+<!-- videoground-beta-world -->
+* () timer-hiit : make new dae file for numbers with the slash
 <!-- videoground r7 -->
 * () work on next item in videoground r7 todo list
 
