todo update for 02/19/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -32,9 +32,9 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-emissive-map - proof read intro, and getting started
 * (done) forpost: threejs-emissive-map - update demos to r146 style
 * (done) edit: threejs-emissive-map - inject updated code, and do additional proof reading
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts - start video2 for threejs-emissive-map
-* () edit: threejs-emissive-map - embed video2
+* (done) videoground-blog-posts - start video2 for threejs-emissive-map
+* (done) edit: threejs-emissive-map - embed video2
+
 * () forpost: threejs-emissive-map - new demo based on video1 code
 * () edit: threejs-emissive-map - write about video1
 <!-- videoground-beta-world -->
