--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -34,9 +34,9 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-emissive-map - inject updated code, and do additional proof reading
 * (done) videoground-blog-posts - start video2 for threejs-emissive-map
 * (done) edit: threejs-emissive-map - embed video2
+* (done) forpost: threejs-emissive-map - new demo based on video1 code
+* (done) edit: threejs-emissive-map - write about video1
 
-* () forpost: threejs-emissive-map - new demo based on video1 code
-* () edit: threejs-emissive-map - write about video1
 <!-- videoground-beta-world -->
 * () timer-hiit : make new dae file for numbers with the slash
 <!-- videoground r7 -->
