--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -27,6 +27,8 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 <!-- forpost/edit -->
 * () edit: threejs-examples-tracks - expand more on R0 section
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+<!-- videoground-beta-world -->
+* () timer-hiit : make new dae file for numbers with the slash
 
 ### () - SUN 02/19/2023
 * (done) edit: threejs-emissive-map - proof read intro, and getting started
@@ -36,11 +38,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-emissive-map - embed video2
 * (done) forpost: threejs-emissive-map - new demo based on video1 code
 * (done) edit: threejs-emissive-map - write about video1
-
-<!-- videoground-beta-world -->
-* () timer-hiit : make new dae file for numbers with the slash
-<!-- videoground r7 -->
-* () work on next item in videoground r7 todo list
+* (done) work on next item in videoground r7 todo list
 
 <!-------- ----------
 -- WEEK 3
