--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,16 +14,24 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## () - WEEK 4 - SUN 02/019/2023 - SAT 02/25/2023
 
 ### () - SAT 02/25/2023
+<!-- videoground r7-->
+* () work on videoground r7v
 
 ### () - FRI 02/24/2023
 
 ### () - THU 02/23/2023
+<!-- videoground r7-->
+* () work on videoground r7
 
 ### () - WED 02/22/2023
 
 ### () - TUE 02/21/2023
+<!-- videoground r7-->
+* () work on videoground r7
 
 ### () - MON 02/20/2023
+<!-- videoground r7-->
+* () work on videoground r7
 <!-- forpost/edit -->
 * () edit: threejs-examples-tracks - expand more on R0 section
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
