--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -30,8 +30,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () work on videoground r7
 
 ### () - MON 02/20/2023
-<!-- videoground r7-->
-* () work on videoground r7
+* (done) work on videoground r7
 <!-- forpost/edit -->
 * () edit: threejs-examples-tracks - expand more on R0 section
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
