--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,18 +24,26 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () work on videoground r7
 
 ### () - WED 02/22/2023
+<!-- forpost/edit -->
+* () edit: threejs-wireframe - proof read opening and getting started
+* () forpost: threejs-wireframe - update to r146 style
 
 ### () - TUE 02/21/2023
 <!-- videoground r7-->
 * () work on videoground r7
+<!-- forpost/edit -->
+* () edit: threejs-camera-orthographic - proof read opening and getting started
+* () forpost: threejs-camera-orthographic - update demos to r146 style
+* () edit: threejs-camera-orthographic - inject up to date code exmaples
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 02/20/2023
 * (done) work on videoground r7
-<!-- forpost/edit -->
-* () edit: threejs-examples-tracks - expand more on R0 section
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* (done) edit: threejs-examples-tracks - expand more on R0 section
 <!-- videoground-beta-world -->
 * () timer-hiit : make new dae file for numbers with the slash
+<!-- forpost/new -->
+* () start a new prototype for this week.
 
 ### () - SUN 02/19/2023
 * (done) edit: threejs-emissive-map - proof read intro, and getting started
