todo update for 02/20/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -36,12 +36,13 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-camera-orthographic - update demos to r146 style
 * () edit: threejs-camera-orthographic - inject up to date code exmaples
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+<!-- videoground-beta-world -->
+* () make first timer-hiit video using video5-cdr1.js
 
 ### () - MON 02/20/2023
 * (done) work on videoground r7
 * (done) edit: threejs-examples-tracks - expand more on R0 section
-<!-- videoground-beta-world -->
-* () timer-hiit : make new dae file for numbers with the slash
+* (done) timer-hiit : make new dae file for numbers with the slash
 <!-- forpost/new -->
 * () start a new prototype for this week.
 
