todo update for 02/21/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -29,8 +29,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-wireframe - update to r146 style
 
 ### () - TUE 02/21/2023
-<!-- videoground r7-->
-* () work on videoground r7
+* (done) work on videoground r7
 <!-- forpost/edit -->
 * () edit: threejs-camera-orthographic - proof read opening and getting started
 * () forpost: threejs-camera-orthographic - update demos to r146 style
@@ -38,13 +37,13 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 <!-- videoground-beta-world -->
 * () make first timer-hiit video using video5-cdr1.js
+<!-- forpost/new -->
+* () start a new prototype for this week.
 
 ### () - MON 02/20/2023
 * (done) work on videoground r7
 * (done) edit: threejs-examples-tracks - expand more on R0 section
 * (done) timer-hiit : make new dae file for numbers with the slash
-<!-- forpost/new -->
-* () start a new prototype for this week.
 
 ### () - SUN 02/19/2023
 * (done) edit: threejs-emissive-map - proof read intro, and getting started
