--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -16,8 +16,10 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - SAT 02/25/2023
 <!-- videoground r7-->
 * () work on videoground r7v
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/24/2023
+* () start post #1029 on threejs-
 
 ### () - THU 02/23/2023
 <!-- videoground r7-->
@@ -31,14 +33,13 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - TUE 02/21/2023
 * (done) work on videoground r7
 <!-- forpost/edit -->
-* () edit: threejs-camera-orthographic - proof read opening and getting started
-* () forpost: threejs-camera-orthographic - update demos to r146 style
-* () edit: threejs-camera-orthographic - inject up to date code exmaples
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
-<!-- videoground-beta-world -->
-* () make first timer-hiit video using video5-cdr1.js
+* (done) edit: threejs-camera-orthographic - proof read opening and getting started
+* (done) forpost: threejs-camera-orthographic - update demos to r146 style
+* (done) edit: threejs-camera-orthographic - inject up to date code exmaples
 <!-- forpost/new -->
 * () start a new prototype for this week.
+<!-- videoground-beta-world -->
+* () make first timer-hiit video using video5-cdr1.js
 
 ### () - MON 02/20/2023
 * (done) work on videoground r7
