--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,7 +19,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/24/2023
-* () start post #1029 on threejs-
+* () start post #1029 on threejs-points
 
 ### () - THU 02/23/2023
 <!-- videoground r7-->
@@ -36,8 +36,9 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-camera-orthographic - proof read opening and getting started
 * (done) forpost: threejs-camera-orthographic - update demos to r146 style
 * (done) edit: threejs-camera-orthographic - inject up to date code exmaples
-<!-- forpost/new -->
-* () start a new prototype for this week.
+* (done) start a new prototype for this week.
+
+* () start threejs-points for post folder based on the r146 demos I have thus far.
 <!-- videoground-beta-world -->
 * () make first timer-hiit video using video5-cdr1.js
 
