--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -32,13 +32,11 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 
 ### () - TUE 02/21/2023
 * (done) work on videoground r7
-<!-- forpost/edit -->
 * (done) edit: threejs-camera-orthographic - proof read opening and getting started
 * (done) forpost: threejs-camera-orthographic - update demos to r146 style
 * (done) edit: threejs-camera-orthographic - inject up to date code exmaples
 * (done) start a new prototype for this week.
-
-* () start threejs-points for post folder based on the r146 demos I have thus far.
+* (done) start threejs-points for post folder based on the r146 demos I have thus far.
 <!-- videoground-beta-world -->
 * () make first timer-hiit video using video5-cdr1.js
 
