todo update for 02/22/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -29,6 +29,12 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 <!-- forpost/edit -->
 * () edit: threejs-wireframe - proof read opening and getting started
 * () forpost: threejs-wireframe - update to r146 style
+<!-- videoground-blog-posts -->
+* () video2 for threejs-wireframe
+<!-- videoground-beta-world -->
+* () start work on a new video project
+<!-- videoground r7-->
+* () work on videoground r7
 
 ### () - TUE 02/21/2023
 * (done) work on videoground r7
@@ -37,8 +43,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-camera-orthographic - inject up to date code exmaples
 * (done) start a new prototype for this week.
 * (done) start threejs-points for post folder based on the r146 demos I have thus far.
-<!-- videoground-beta-world -->
-* () make first timer-hiit video using video5-cdr1.js
+* (done) make first timer-hiit video using video5-cdr1.js
 
 ### () - MON 02/20/2023
 * (done) work on videoground r7
