todo update for 02/23/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,11 +24,11 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - THU 02/23/2023
 <!-- videoground r7-->
 * () work on videoground r7
+* () edit: threejs-wireframe - proof read and expand section 1
 
 ### () - WED 02/22/2023
-<!-- forpost/edit -->
-* () edit: threejs-wireframe - proof read opening and getting started
-* () forpost: threejs-wireframe - update to r146 style
+* (done) edit: threejs-wireframe - proof read opening and getting started
+* (done) forpost: threejs-wireframe - update to r146 style
 <!-- videoground-blog-posts -->
 * () video2 for threejs-wireframe
 <!-- videoground-beta-world -->
