todo update for 02/22/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -29,8 +29,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - WED 02/22/2023
 * (done) edit: threejs-wireframe - proof read opening and getting started
 * (done) forpost: threejs-wireframe - update to r146 style
-<!-- videoground-blog-posts -->
-* () video2 for threejs-wireframe
+* (done) video2 for threejs-wireframe
 <!-- videoground-beta-world -->
 * () start work on a new video project
 <!-- videoground r7-->
