--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,21 +19,24 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/24/2023
-* () start post #1029 on threejs-points
 
 ### () - THU 02/23/2023
-<!-- videoground r7-->
+<!-- new post -->
+* () forpost: threejs-points - more demos
+* () start post #1029 on threejs-points
+<!-- videoground r7 -->
 * () work on videoground r7
 * () edit: threejs-wireframe - proof read and expand section 1
+<!-- videoground-beta-world -->
+* () work on video1 for breathing basic
+<!-- videoground-blog-posts -->
+* () start video1 for threejs-points
 
 ### () - WED 02/22/2023
 * (done) edit: threejs-wireframe - proof read opening and getting started
 * (done) forpost: threejs-wireframe - update to r146 style
 * (done) video2 for threejs-wireframe
-<!-- videoground-beta-world -->
-* () start work on a new video project
-<!-- videoground r7-->
-* () work on videoground r7
+* (done) started new breathing-basic video project
 
 ### () - TUE 02/21/2023
 * (done) work on videoground r7
