--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,14 +19,13 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/24/2023
+* () edit: threejs-wireframe - proof read and expand section 1
 
 ### () - THU 02/23/2023
-<!-- new post -->
-* () forpost: threejs-points - more demos
-* () start post #1029 on threejs-points
+* (done) forpost: threejs-points - more demos
+* (done) start post #1029 on threejs-points
 <!-- videoground r7 -->
 * () work on videoground r7
-* () edit: threejs-wireframe - proof read and expand section 1
 <!-- videoground-beta-world -->
 * () work on video1 for breathing basic
 <!-- videoground-blog-posts -->
