--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,12 +24,11 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - THU 02/23/2023
 * (done) forpost: threejs-points - more demos
 * (done) start post #1029 on threejs-points
+* (done) start video1 for threejs-points
 <!-- videoground r7 -->
 * () work on videoground r7
 <!-- videoground-beta-world -->
 * () work on video1 for breathing basic
-<!-- videoground-blog-posts -->
-* () start video1 for threejs-points
 
 ### () - WED 02/22/2023
 * (done) edit: threejs-wireframe - proof read opening and getting started
