--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,16 +19,16 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 02/24/2023
-* () edit: threejs-wireframe - proof read and expand section 1
+* (done) edit: threejs-wireframe - proof read and expand section 1
+<!-- videoground r7 -->
+* () work on videoground r7
+<!-- videoground-beta-world -->
+* () work on video1 for breathing basic
 
 ### () - THU 02/23/2023
 * (done) forpost: threejs-points - more demos
 * (done) start post #1029 on threejs-points
 * (done) start video1 for threejs-points
-<!-- videoground r7 -->
-* () work on videoground r7
-<!-- videoground-beta-world -->
-* () work on video1 for breathing basic
 
 ### () - WED 02/22/2023
 * (done) edit: threejs-wireframe - proof read opening and getting started
