--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -9,21 +9,32 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 
 
 <!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 02/26/2023 - TUE 02/28/2023
+
+### () - TUE 02/26/2023
+
+### () - MON 02/26/2023
+<!-- example tracks -->
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+
+### () - SUN 02/26/2023
+<!-- videoground-beta-world -->
+* () work on video1 for breathing basic
+<!-- videoground r7-->
+* () work on videoground r7
+
+<!-------- ----------
 -- WEEK 4
 ---------- --------->
-## () - WEEK 4 - SUN 02/019/2023 - SAT 02/25/2023
+## () - WEEK 4 - SUN 02/19/2023 - SAT 02/25/2023
 
 ### () - SAT 02/25/2023
-<!-- videoground r7-->
-* () work on videoground r7v
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* (done) started a r149 demo folder and will be getting started with JSM with that revision becuase r150 does not work for me
 
 ### () - FRI 02/24/2023
 * (done) edit: threejs-wireframe - proof read and expand section 1
-<!-- videoground r7 -->
-* () work on videoground r7
-<!-- videoground-beta-world -->
-* () work on video1 for breathing basic
 
 ### () - THU 02/23/2023
 * (done) forpost: threejs-points - more demos
