--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -1,4 +1,4 @@
-# todo list for JAN 2023
+# todo list for FEB 2023
 
 THREEJS, VIDEOGROUND-BETA-WORLD
 
@@ -13,17 +13,16 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ---------- --------->
 ## () - WEEK 5 - SUN 02/26/2023 - TUE 02/28/2023
 
-### () - TUE 02/26/2023
+### () - TUE 02/28/2023
+* () edit :
+* () build and publish
+* () start r146 prototype for breath.js based on what I have with the template8 beta world videos
 
-### () - MON 02/26/2023
-<!-- example tracks -->
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+### () - MON 02/27/2023
+* (done) work on video1 for breathing-basic
 
 ### () - SUN 02/26/2023
-<!-- videoground-beta-world -->
-* () work on video1 for breathing basic
-<!-- videoground r7-->
-* () work on videoground r7
+* (done) work on video1 for breathing basic
 
 <!-------- ----------
 -- WEEK 4
