todo update for 02/28/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,9 +14,16 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## () - WEEK 5 - SUN 02/26/2023 - TUE 02/28/2023
 
 ### () - TUE 02/28/2023
-* () edit :
+* () edit : threejs-buffer-geometry-loader - proof read opening and getting started
+* () forpost: threejs-buffer-geometry-loader - update examples to r146 style
+* () forpost: threejs-buffer-geometry-loader - more than one demo done
+* () edit: threejs-buffer-geometry-loader - write about new demo
+
 * () build and publish
+
 * () start r146 prototype for breath.js based on what I have with the template8 beta world videos
+
+* () work on video1 for breathing-basic in beta world
 
 ### () - MON 02/27/2023
 * (done) work on video1 for breathing-basic
