todo update for 02/28/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,10 +14,10 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ## () - WEEK 5 - SUN 02/26/2023 - TUE 02/28/2023
 
 ### () - TUE 02/28/2023
-* () edit : threejs-buffer-geometry-loader - proof read opening and getting started
-* () forpost: threejs-buffer-geometry-loader - update examples to r146 style
-* () forpost: threejs-buffer-geometry-loader - more than one demo done
-* () edit: threejs-buffer-geometry-loader - write about new demo
+* (done) edit : threejs-buffer-geometry-loader - proof read opening and getting started
+* (done) forpost: threejs-buffer-geometry-loader - update examples to r146 style
+* (done) forpost: threejs-buffer-geometry-loader - more than one demo done
+* (done) edit: threejs-buffer-geometry-loader - write about new demo
 
 * () build and publish
 
