--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,12 +18,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) forpost: threejs-buffer-geometry-loader - update examples to r146 style
 * (done) forpost: threejs-buffer-geometry-loader - more than one demo done
 * (done) edit: threejs-buffer-geometry-loader - write about new demo
-
-* () build and publish
-
-* () start r146 prototype for breath.js based on what I have with the template8 beta world videos
-
-* () work on video1 for breathing-basic in beta world
+* (done) start r146 prototype for breath.js based on what I have with the template8 beta world videos
 
 ### () - MON 02/27/2023
 * (done) work on video1 for breathing-basic
