--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -14,20 +14,29 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 1 - WED 03/01/2023 - SAT 03/04/2023
 
 ### () - SAT 03/04/2023
+<!-- for post/edit-->
+* () threejs-vector3-normalize - proof read opening and getting started
 <!-- example tracks -->
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 03/03/2023
+<!-- for post/edit-->
+* () threejs-mesh-copy - proof read opening and getting started
+<!-- write new -->
 * () start post #1030 on threejs-examples-breath-module
+* () build and publish
 
 ### () - THU 03/02/2023
+<!-- for post/edit-->
+* () edit: threejs-point-light
 <!-- videoground r7-->
 * () work on videoground r7
 
 ### () - WED 03/01/2023
 <!-- for post/ edit-->
-
+* () edit: threejs-camera-perspective
 <!-- videoground-beta-world -->
-* () work on video1 for breathing-basic
+* () start video4-breathjs-r0.js in template8
+* () update video1-core.js in breathing-basic video folder
 <!-- videoground r7-->
 * () work on videoground r7
