todo update for 03/02/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -27,18 +27,16 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () build and publish
 
 ### () - THU 03/02/2023
-<!-- for post/edit-->
-* () edit: threejs-point-light
-<!-- videoground r7-->
+* () forpost: threejs-point-light - update demos
+* () edit: threejs-point-light - proof read opening and getting started
+* () videoground-blog-posts: video2 for threejs-camera-perspective
+* () videoground-beta-world: breathing-basic - finish up video1.clean
 * () work on videoground r7
 
+* () forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
+
 ### () - WED 03/01/2023
-<!-- for post/ edit-->
 * (done) edit: threejs-camera-perspective
-<!-- for post/new -->
-* () start a threejs-examples-breath-module for post folder starting with the r146 protoype
-<!-- videoground-beta-world -->
-* () start video4-breathjs-r0.js in template8
-* () update video1-core.js in breathing-basic video folder
-<!-- videoground r7-->
-* () work on videoground r7
+* (done) start a threejs-examples-breath-module for post folder starting with the r146 protoype
+* (done) start video4-breathjs-r0.js in template8
+* (done) new video1-clean.js start video for breathing-basic video folder
