--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -27,9 +27,11 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () build and publish
 
 ### () - THU 03/02/2023
+* (done) videoground-blog-posts: video2 for threejs-camera-perspective
+
 * () forpost: threejs-point-light - update demos
 * () edit: threejs-point-light - proof read opening and getting started
-* () videoground-blog-posts: video2 for threejs-camera-perspective
+
 * () videoground-beta-world: breathing-basic - finish up video1.clean
 * () work on videoground r7
 
