todo update for 03/02/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -28,14 +28,13 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - THU 03/02/2023
 * (done) videoground-blog-posts: video2 for threejs-camera-perspective
+* (done) forpost: threejs-point-light - update demos
+* (done) edit: threejs-point-light - proof read opening and getting started
 
-* () forpost: threejs-point-light - update demos
-* () edit: threejs-point-light - proof read opening and getting started
-
+* () forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
 * () videoground-beta-world: breathing-basic - finish up video1.clean
 * () work on videoground r7
 
-* () forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
 
 ### () - WED 03/01/2023
 * (done) edit: threejs-camera-perspective
