--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -7,6 +7,13 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 03/05/2023 - SAT 03/11/2023
+
+### () - SUN 03/05/2023
+* () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective
 
 <!-------- ----------
 -- WEEK 1
@@ -30,8 +37,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) videoground-blog-posts: video2 for threejs-camera-perspective
 * (done) forpost: threejs-point-light - update demos
 * (done) edit: threejs-point-light - proof read opening and getting started
+* (done) forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
 
-* () forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
 * () videoground-beta-world: breathing-basic - finish up video1.clean
 * () work on videoground r7
 
