todo update for 03/03/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -13,6 +13,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 2 - SUN 03/05/2023 - SAT 03/11/2023
 
 ### () - SUN 03/05/2023
+* () videoground-beta-world : finish video3, start video4
 * () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective
 
 <!-------- ----------
@@ -21,17 +22,20 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 1 - WED 03/01/2023 - SAT 03/04/2023
 
 ### () - SAT 03/04/2023
-<!-- for post/edit-->
 * () threejs-vector3-normalize - proof read opening and getting started
-<!-- example tracks -->
+* () videoground-beta-world : work on video3
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 03/03/2023
-<!-- for post/edit-->
-* () threejs-mesh-copy - proof read opening and getting started
+* (done) videoground-beta-world : todo and readme breathing-basic, some work on video2
 <!-- write new -->
 * () start post #1030 on threejs-examples-breath-module
+<!-- for post/edit-->
+* () threejs-mesh-copy - proof read opening and getting started
+
 * () build and publish
+
+* () videoground-beta-world : finish video2, start video3
 
 ### () - THU 03/02/2023
 * (done) videoground-blog-posts: video2 for threejs-camera-perspective
