todo update for 03/03/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -22,20 +22,18 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 1 - WED 03/01/2023 - SAT 03/04/2023
 
 ### () - SAT 03/04/2023
+<!-- for post/edit-->
+* () threejs-mesh-copy - proof read opening and getting started
 * () threejs-vector3-normalize - proof read opening and getting started
+* () build and publish
+
 * () videoground-beta-world : work on video3
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - FRI 03/03/2023
 * (done) videoground-beta-world : todo and readme breathing-basic, some work on video2
-<!-- write new -->
-* () start post #1030 on threejs-examples-breath-module
-<!-- for post/edit-->
-* () threejs-mesh-copy - proof read opening and getting started
-
-* () build and publish
-
-* () videoground-beta-world : finish video2, start video3
+* (done) start post #1030 on threejs-examples-breath-module
+* (done) videoground-beta-world : finish video2, start video3
 
 ### () - THU 03/02/2023
 * (done) videoground-blog-posts: video2 for threejs-camera-perspective
