todo update for 03/04/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -13,8 +13,15 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 2 - SUN 03/05/2023 - SAT 03/11/2023
 
 ### () - SUN 03/05/2023
-* () videoground-beta-world : finish video3, start video4
+<!-- for post/edit-->
+* () threejs-mesh-copy - proof read opening and getting started
+* () threejs-vector3-normalize - proof read opening and getting started
+
+* () videoground-beta-world : work on video4 for breathing-basic
 * () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+
+* () work on videoground r7
 
 <!-------- ----------
 -- WEEK 1
@@ -23,12 +30,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - SAT 03/04/2023
 <!-- for post/edit-->
-* () threejs-mesh-copy - proof read opening and getting started
-* () threejs-vector3-normalize - proof read opening and getting started
 * () build and publish
-
-* () videoground-beta-world : work on video3
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* () videoground-beta-world : work on video4 for breathing-basic
 
 ### () - FRI 03/03/2023
 * (done) videoground-beta-world : todo and readme breathing-basic, some work on video2
@@ -40,10 +43,6 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) forpost: threejs-point-light - update demos
 * (done) edit: threejs-point-light - proof read opening and getting started
 * (done) forpost: threejs-camera-perspective - new loop example with a plane geometry scaled to the aspect of the camera
-
-* () videoground-beta-world: breathing-basic - finish up video1.clean
-* () work on videoground r7
-
 
 ### () - WED 03/01/2023
 * (done) edit: threejs-camera-perspective
