todo update for 03/05/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -12,14 +12,31 @@ I would like to focus on my beta world content first and formost. When doing so 
 ---------- --------->
 ## () - WEEK 2 - SUN 03/05/2023 - SAT 03/11/2023
 
-### () - SUN 03/05/2023
+I would like to finish 'breathing basic' and while doing so start some prototypes for projects that I will be using with this video as well as future projects based off of it. I have two general ideas for additional threes example projects one has to do with having one or more planes positioned in front of the camera, and the other has to do with alpha values. I currently have alpha methods baked into my curve and sequence hook modules, but I think that I should just have these in there own module and remove this from future revisions of those projects.
+
+### () - SAT 03/11/2023
+
+### () - FRI 03/10/2023
+* () start post #1031 on threejs-
+
+### () - THU 03/09/2023
+
+### () - WED 03/08/2023
+
+### () - TUE 03/07/2023
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+
+### () - MON 03/06/2023
 <!-- for post/edit-->
 * () threejs-mesh-copy - proof read opening and getting started
 * () threejs-vector3-normalize - proof read opening and getting started
 
-* () videoground-beta-world : work on video4 for breathing-basic
-* () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+### () - SUN 03/05/2023
+* (done) videoground-beta-world : work on video4 for breathing-basic
+
+* () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective called camera-planes.js
+* () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
+* () start a new r146 prototype that has to do with having a timeline.
 
 * () work on videoground r7
 
@@ -29,9 +46,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 1 - WED 03/01/2023 - SAT 03/04/2023
 
 ### () - SAT 03/04/2023
-<!-- for post/edit-->
-* () build and publish
-* () videoground-beta-world : work on video4 for breathing-basic
+* (done) build and publish
+* (done) videoground-beta-world : work on video4 for breathing-basic
 
 ### () - FRI 03/03/2023
 * (done) videoground-beta-world : todo and readme breathing-basic, some work on video2
