todo update for 03/06/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -27,18 +27,18 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 03/06/2023
-<!-- for post/edit-->
-* () threejs-mesh-copy - proof read opening and getting started
-* () threejs-vector3-normalize - proof read opening and getting started
+* () edit: threejs-mesh-copy - proof read opening and getting started
+* () edit: threejs-vector3-normalize - proof read opening and getting started
+
+* () videoground-blog-posts: 
+
+* () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
+* () start a new r146 prototype that has to do with having a timeline.
+* () work on videoground r7
 
 ### () - SUN 03/05/2023
 * (done) videoground-beta-world : work on video4 for breathing-basic
-
-* () start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective called camera-planes.js
-* () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
-* () start a new r146 prototype that has to do with having a timeline.
-
-* () work on videoground r7
+* (done) start a new r146 prototype based on s4-2-loop-plane-aspect from threejs-camera-perspective called camera-planes.js
 
 <!-------- ----------
 -- WEEK 1
