todo update for 03/06/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -27,7 +27,10 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 03/06/2023
-* () edit: threejs-mesh-copy - proof read opening and getting started
+* (done) edit: threejs-mesh-copy - proof read opening and getting started
+* () forpost: threejs-mesh-copy - consolidate, and rename folders
+* () forpost: threejs-mesh-copy - update basic examples to r146 style
+
 * () edit: threejs-vector3-normalize - proof read opening and getting started
 
 * () videoground-blog-posts: 
