--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -24,16 +24,18 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 ### () - WED 03/08/2023
 
 ### () - TUE 03/07/2023
+* () edit: threejs-vector3-normalize - proof read opening and getting started
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 03/06/2023
 * (done) edit: threejs-mesh-copy - proof read opening and getting started
-* () forpost: threejs-mesh-copy - consolidate, and rename folders
-* () forpost: threejs-mesh-copy - update basic examples to r146 style
+* (done) forpost: threejs-mesh-copy - consolidate, and rename folders
+* (done) forpost: threejs-mesh-copy - update basic examples to r146 style
 
-* () edit: threejs-vector3-normalize - proof read opening and getting started
+* () forpost: threejs-mesh-copy - start new children section
 
-* () videoground-blog-posts: 
+
+* () videoground-blog-posts: make a video2 for threejs-mesh-copy
 
 * () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
 * () start a new r146 prototype that has to do with having a timeline.
