todo update for 03/06/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -31,8 +31,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) edit: threejs-mesh-copy - proof read opening and getting started
 * (done) forpost: threejs-mesh-copy - consolidate, and rename folders
 * (done) forpost: threejs-mesh-copy - update basic examples to r146 style
-
-* () videoground-blog-posts: make video1 for threejs-examples-breath-module
+* (done) videoground-blog-posts: make video1 for threejs-examples-breath-module
 
 * () forpost: threejs-mesh-copy - start new children section
 * () forpost: threejs-mesh-copy - start new loop section
