todo update for 03/07/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -25,6 +25,9 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 
 ### () - TUE 03/07/2023
 * () edit: threejs-vector3-normalize - proof read opening and getting started
+* () forpost: threejs-mesh-copy - start new loop section
+* () videoground-blog-posts: make a video2 for threejs-mesh-copy
+
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 03/06/2023
@@ -32,16 +35,12 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) forpost: threejs-mesh-copy - consolidate, and rename folders
 * (done) forpost: threejs-mesh-copy - update basic examples to r146 style
 * (done) videoground-blog-posts: make video1 for threejs-examples-breath-module
-
-* () forpost: threejs-mesh-copy - start new children section
-* () forpost: threejs-mesh-copy - start new loop section
-* () videoground-blog-posts: make a video2 for threejs-mesh-copy
-
-* () videoground-beta-world: start video5 for breathing basic
+* (done) forpost: threejs-mesh-copy - start new children section
 
 * () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
-* () start a new r146 prototype that has to do with having a timeline.
 
+* () start a new r146 prototype that has to do with having a timeline.
+* () videoground-beta-world: start video5 for breathing basic
 * () work on videoground r7
 
 ### () - SUN 03/05/2023
