todo update for 03/08/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -18,10 +18,13 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 
 ### () - FRI 03/10/2023
 * () start post #1031 on threejs-
+* () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
+* () edit: threejs-vector3-wrap
 
 ### () - WED 03/08/2023
+* () edit: threejs-vector3-clamp
 
 ### () - TUE 03/07/2023
 * () edit: threejs-vector3-normalize - proof read opening and getting started
