--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -30,8 +30,8 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () edit: threejs-vector3-normalize - proof read opening and getting started
 * () forpost: threejs-mesh-copy - start new loop section
 * () videoground-blog-posts: make a video2 for threejs-mesh-copy
-
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* () start a new r146 prototype that has to do with having a timeline.
 
 ### () - MON 03/06/2023
 * (done) edit: threejs-mesh-copy - proof read opening and getting started
@@ -39,10 +39,8 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) forpost: threejs-mesh-copy - update basic examples to r146 style
 * (done) videoground-blog-posts: make video1 for threejs-examples-breath-module
 * (done) forpost: threejs-mesh-copy - start new children section
+* (done) start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
 
-* () start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
-
-* () start a new r146 prototype that has to do with having a timeline.
 * () videoground-beta-world: start video5 for breathing basic
 * () work on videoground r7
 
